plugins {
    id 'java-library'
    id 'com.gradleup.shadow' version '9.6.1'
}

group = 'io.github.spencerpark'
// Allow overriding version from command line via `-Pversion=...`
version = (gradle.startParameter.projectProperties.get('version') ?: '1.4.6').toString()

// Java configuration
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withJavadocJar()
    withSourcesJar()
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = 'Sonatype Snapshots'
        url = 'https://oss.sonatype.org/content/repositories/snapshots/'
        content {
            // only for SNAPSHOT versions
            includeGroup 'io.github.spencerpark'
        }
    }
}

// Dependency versions
def versions = [
    gson: '2.10.1',
    mavenResolver: '1.8.2',
    mavenProvider: '3.8.6',
    logback: '1.5.7',
    junit: '4.13.2',
    lombok: '1.18.48'
]

configurations.all {
    resolutionStrategy {
        force 'com.google.guava:guava:33.5.0-jre'
        force 'com.google.guava:failureaccess:1.0.3'
        force 'com.google.errorprone:error_prone_annotations:2.41.0'
    }
}

dependencies {
    implementation project(':basekernel')
    implementation "com.google.code.gson:gson:${versions.gson}"

    // Maven resolver dependencies
    implementation("org.apache.maven:maven-resolver-provider:${versions.mavenProvider}") {
        exclude group: 'org.apache.maven.resolver'
    }
    implementation "org.apache.maven.resolver:maven-resolver-impl:${versions.mavenResolver}"
    implementation "org.apache.maven.resolver:maven-resolver-connector-basic:${versions.mavenResolver}"
    implementation "org.apache.maven.resolver:maven-resolver-transport-file:${versions.mavenResolver}"
    implementation "org.apache.maven.resolver:maven-resolver-transport-http:${versions.mavenResolver}"
    implementation "org.apache.maven.resolver:maven-resolver-transport-classpath:${versions.mavenResolver}"

    implementation "ch.qos.logback:logback-classic:${versions.logback}"
    testImplementation "junit:junit:${versions.junit}"
    testImplementation 'com.h2database:h2:2.2.220'

    // JavaParser for Java source code analysis
    implementation 'com.github.javaparser:javaparser-core:3.25.8'
    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.25.8'
    // PlantUML for diagrams
    //implementation 'net.sourceforge.plantuml:plantuml:1.2024.1'
    implementation('net.sourceforge.plantuml:plantuml:1.2026.0') {
        transitive = false
    }

    // ClassGraph for classpath scanning
    implementation 'io.github.classgraph:classgraph:4.8.168'
    // Lombok for annotations processing
    compileOnly "org.projectlombok:lombok:${versions.lombok}"
    annotationProcessor "org.projectlombok:lombok:${versions.lombok}"
}


// Build configuration
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
    options.deprecation = true
    options.release = 25
}

// Resource filtering
def kernelProjectName = rootProject.name
def kernelVersion = project.version
processResources {
    filesMatching(['ijava-kernel-metadata.json', 'kernel-metadata.json', 'kernel.json']) {
        expand(
            project: kernelProjectName,
            version: kernelVersion
        )
    }
}

// Shadow JAR configuration
shadowJar {
    archiveClassifier.set('all')
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    mergeServiceFiles()
    exclude 'module-info.class'
    exclude 'META-INF/versions/*/module-info.class'
    exclude 'META-INF/MANIFEST.MF'
    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude 'META-INF/INDEX.LIST'
    manifest {
        attributes(
            'Main-Class': 'io.github.spencerpark.ijava.IJava',
            'Implementation-Version': project.version,
            'Built-By': System.properties['user.name'],
            'Build-Timestamp': new java.text.SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
            'Created-By': "Gradle ${gradle.gradleVersion}",
            'Build-Jdk': "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})"
        )
    }
    // copy build.gradle to shadowed jar
    from("./") {
        include 'build.gradle'
    }
}

// Distribution package
tasks.register('packDist', Zip) {
    description = 'Creates distribution package'
    group = 'distribution'

    archiveFileName = "${project.name}-${project.version}.zip"

    from(layout.buildDirectory.dir("resources/main")) {
        include "install.py"
    }

    from(layout.buildDirectory.dir("libs")) {
        include "*-all.jar"
        into "java"
        rename { filename ->
            filename.replace("-all.jar", ".jar")
        }
    }

    from(layout.buildDirectory.dir("resources/main")) {
        include "kernel.json"
        into "java"
    }

    // Ensure shadowJar task runs before packaging
    dependsOn shadowJar
    dependsOn processResources
}

// Dependency download task
tasks.register('downloadDependencies') {
    description = 'Downloads all dependencies'
    group = 'build setup'

    doLast {
        configurations.all { configuration ->
            if (configuration.canBeResolved) {
                configuration.resolve()
            }
        }
    }
}

// Build finalization
build.finalizedBy(packDist)
